Integrasi API Login Dan Implementasi JWT

--- a/api-gateway/.env
+++ b/api-gateway/.env
@@ -1,6 +1,13 @@
 PORT = 3000
 
 APP_NAME = api_gateway
+
 TIMEOUT = 5000
 
 URL_SERVICE_MEDIA = http://localhost:8080
+URL_SERVICE_USER = http://localhost:5000
+
+JWT_SECRET=vincentmicroservice
+JWT_SECRET_REFRESH_TOKEN=refreshtokenvincent
+JWT_ACCESS_TOKEN_EXPIRED=5m
+JWT_REFRESH_TOKEN_EXPIRED=1d
